tests/negative/gold/dot_test.gold
tests/negative/dot_test.toit:6:10: error: Incomplete expression
  prefix.
         ^
tests/negative/dot_test.toit:7:9: error: Unresolved identifier: 'unresolved'
  print unresolved
        ^~~~~~~~~~
Compilation failed.
